# watering

./: .gitignore  .gitmodules  BoardOptions.cmake  CMakeLists.txt  LICENSE.txt  README.md  main.cpp  main.ino
docs/: Doxyfile  style.css
include/: constants.hpp  main.hpp  moist.hpp  pins.hpp  sense.hpp  water.hpp
src/: main.cpp  moist.cpp  sense.cpp  water.cpp
